<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMobileSQLServer - Utesov</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ip">ip...</string>
    <string name="port">port</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="exec_sql">exec SQL</string>
    <string name="edit_user">edit user</string>
    <string name="functions">functions</string>
    <string name="log">LOG</string>
    <string name="err_port">Specify the port number</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_log">refresh log</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="add_user">Add user</string>
    <string name="new_user">New user</string>
    <string name="user_name">Name:</string>
    <string name="user_description">Description:</string>
    <string name="user_pass">Password:</string>
    <string name="user_retype_pass">Retype password:</string>
    <string name="user_pass_wrong_message">The passwords do not match</string>
    <string name="user_bad_name">The name entered is incorrect</string>
    <string name="user_delete_user">To delete a user?</string>
    
    <string name="title_activity_exec_sql">ExecSQLActivity</string>
    <string name="enter_sql">Enter the SQL request</string>
    <string name="select_user">Select user</string>

</resources>
