<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.gc986.mymobilesqlserver.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_log" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup1"
        android:gravity="center_horizontal"
        android:text="ip..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_edit_users"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_exec_sql"
        android:text="@string/log" />

    <TextView
        android:id="@+id/textView_split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIP"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_exec_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView_split"
        android:layout_alignTop="@+id/textView_split"
        android:text="@string/exec_sql" />

    <Button
        android:id="@+id/button_functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_log"
        android:layout_alignBottom="@+id/button_log"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button_exec_sql"
        android:enabled="false"
        android:text="@string/functions" />

    <Button
        android:id="@+id/button_edit_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_log"
        android:layout_alignLeft="@+id/textView_split"
        android:layout_alignParentRight="true"
        android:text="@string/edit_user" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/port"
        android:text="6000" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_port"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:checked="true"
            android:text="off" />

        <RadioButton
            android:id="@+id/radio_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="on" />
    </RadioGroup>

</RelativeLayout>